--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
+  margin: 10;
+  padding: 10;
+}
