--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -15,12 +15,12 @@ h1 {
 }
 
 p {
-  font-size: 18px; /* Adjust the size as needed */
+  font-size: 18px; 
 }
 
 .dog-card {
   background-color: #374151;
-  padding: 0px; /* Adjust the value as needed */
+  padding: 0px;
   border-radius: 8px;
   margin-bottom: 20px;
   padding-top: 10px;
@@ -49,7 +49,7 @@ p {
 .dog-card p {
   margin-top: 8px;
   color: white;
-  font-size: 1rem; /* Using rem for consistency */
+  font-size: 1rem; 
 }
 
 #search-container {
@@ -62,14 +62,14 @@ p {
 
 #search {
   text-align: center;
-  margin: 8px auto; /* Auto margin for centering horizontally */
+  margin: 8px auto; 
   padding: 10px;
   border: none;
   border-radius: 4px;
   background-color: rgb(77, 73, 83);
   color: #ffffff;
-  width: 100%; /* Responsive width */
-  max-width: 500px; /* Set a maximum width if needed */
+  width: 100%;
+  max-width: 500px;
   font-size: 15px;
 }
 
