--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -12,15 +12,17 @@
 
 h1 {
   font-size: 34px;
+  margin-top: 8px;
 }
 
 p {
-  font-size: 18px; 
+  font-size: 18px;
+  margin-top: 8px;
 }
 
 .dog-card {
   background-color: #374151;
-  padding: 0px;
+  padding: 0px; 
   border-radius: 8px;
   margin-bottom: 20px;
   padding-top: 10px;
@@ -62,14 +64,14 @@ p {
 
 #search {
   text-align: center;
-  margin: 8px auto; 
+  margin: 8px auto;
   padding: 10px;
   border: none;
   border-radius: 4px;
   background-color: rgb(77, 73, 83);
   color: #ffffff;
-  width: 100%;
-  max-width: 500px;
+  width: 100%; 
+  max-width: 650px; 
   font-size: 15px;
 }
 
@@ -86,10 +88,7 @@ p {
 }
 
 .search-input::placeholder {
-  font-size: 1rem;
+  font-size: 20px;
   color: white;
 }
-
-
-
 
